Update config.yaml with reverse_proxy_auth_header

--- a/grocy/config.yaml
+++ b/grocy/config.yaml
@@ -69,6 +69,7 @@ schema:
     stock_product_freezing: bool
     stock_product_opened_tracking: bool
     stock_count_opened_products_against_minimum_stock_amount: bool
+    reverse_proxy_auth_header: str?
   ssl: bool
   certfile: str
   keyfile: str
