--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,2 @@
 name: Grocy fork
-url: https://github.com/Cyper-Madsen/addon-grocy/
-maintainer: me 
+maintainer: Awesome Maintainer <awesome@example.com>
